@@ -32,7 +32,7 @@ type test = {
   scopes : scopes option;
 }
 
-val pp : out_channel -> test -> unit
+val pp : test -> string
 
 (**************)
 (* For models *)
