@@ -1,3 +1,4 @@
+ * tools: add msethashes, for changing *test* hashes.
 7.38
  * gen: list all global variables in init when type is non-default
  * new mselect: specify intervals for number of ins and number of threads.
